tests/fixtures/valid/crazy/builtins/set.py
# Valid set() calls
# Auto-generated by scripts/generate_tests.py

b0_set_str = set("hello")
b1_set_bytes = set(b"hello")
b2_set_list = set([1, 2, 3])
b3_set_dict = set({"a": 1})
b4_set_set = set({1, 2, 3})

print("set() tests passed!")
