tests/fixtures/invalid/pow_dict_str_list.py
# Cannot call pow() with Dict[str, int], Str, List[int]
x = pow({"a": 1}, "hello", [1, 2, 3])
